added auth services, controllers, setup db
